apps/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: adguard
  annotations:
    nginx.ingress.kubernetes.io/auth-url: >-
      http://authentik-server.authentik.svc.cluster.local:80/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: >-
      https://adguard.nerv.local/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: >-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-entitlements,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - adguard.nerv.local
      secretName: adguard-tls
  rules:
    - host: adguard.nerv.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 80
